--- a/sections/h_testimonial.liquid
+++ b/sections/h_testimonial.liquid
@@ -28,7 +28,7 @@
       <div class="h-section-content testimonial-ar ">
         <div class="carousel" data-flickity='{ "wrapAround": true}'>
         {% for block in section.blocks %}
-          <div class="carousel-cell" style="width:33%">
+          <div class="carousel-cell h-tes" style="">
             <div class="h-testimonial-wrap" style="">
               <div class="h-rating-wrapper">
                 <div class="h-rating">
