--- a/sections/h-footer.liquid
+++ b/sections/h-footer.liquid
@@ -1,58 +1,415 @@
-<!-- Tệp sections/footer-custom-section.liquid -->
-<section class="footer-custom-section">
-    <div class="container">
-      <h3>{{ section.settings.heading }}</h3>
-      <p>{{ section.settings.description }}</p>
-      <ul>
-        {% for link in section.blocks %}
-          <li><a href="{{ link.settings.link_url }}">{{ link.settings.link_text }}</a></li>
-        {% endfor %}
-      </ul>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<footer>
+    <div class="h-section-inner" style="--mgtb-top:{{ section.settings.service_mgt }}px;
+      --mgtb-bottom:{{ section.settings.service_mgbt }}px;">
+        <div class="h-container">
+          <div class="h-footer-wrap row">
+              <div class="h-col-item col-md-3">
+                  <div class="h-col-inner">
+                      <div class="h-ft-lg-img"
+                      style="
+                      --w:{{ section.settings.ft_img_w }}px;
+                      --mgbt:{{ section.settings.ft_img_mgbt }}px;
+                      ">
+                        <img src="{{ section.settings.image | image_url }}" alt=""
+                        width="100%"
+                        height="auto"
+                        >
+                      </div>
+                      <p class="h-text-bl"style="
+                          --text-fs:{{ section.settings.ft_ds_fs }}px;
+                          --text-fw:{{ section.settings.ft_ds_fw }};
+                          --text-lh:{{ section.settings.ft_ds_flh }}px;
+                          --color:{{ section.settings.ft_ds_cl }};
+                          --mg-bottom:{{ section.settings.ft_ds_mgbt}}px;
+                        ">{{ section.settings.ft_des_text }}</p>
+                      <div class="map">
+                        <div class="map-inner">
+                          <div class="h-location-icon">
+                            <svg style="width: 24px;height: 24px;vertical-align: middle;fill: currentColor;" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" xml:space="preserve"><path d="M256,0C156.748,0,76,80.748,76,180c0,33.534,9.289,66.26,26.869,94.652l142.885,230.257 c2.737,4.411,7.559,7.091,12.745,7.091c0.04,0,0.079,0,0.119,0c5.231-0.041,10.063-2.804,12.75-7.292L410.611,272.22 C427.221,244.428,436,212.539,436,180C436,80.748,355.252,0,256,0z M384.866,256.818L258.272,468.186l-129.905-209.34 C113.734,235.214,105.8,207.95,105.8,180c0-82.71,67.49-150.2,150.2-150.2S406.1,97.29,406.1,180 C406.1,207.121,398.689,233.688,384.866,256.818z"></path><path d="M256,90c-49.626,0-90,40.374-90,90c0,49.309,39.717,90,90,90c50.903,0,90-41.233,90-90C346,130.374,305.626,90,256,90z M256,240.2c-33.257,0-60.2-27.033-60.2-60.2c0-33.084,27.116-60.2,60.2-60.2s60.1,27.116,60.1,60.2 C316.1,212.683,289.784,240.2,256,240.2z"></path></svg>
+                          </div>
+                          <div class="h-address h-text-bl"style="
+                            padding-inline-start: 12px;
+                          --text-fs:{{ section.settings.ft_adr_fs }}px;
+                          --text-fw:{{ section.settings.ft_adr_fw }};
+                          --text-lh:{{ section.settings.ft_adr_flh }}px;
+                          --color:{{ section.settings.ft_adr_cl }};
+                          --mg-bottom:{{ section.settings.ft_adr_mgbt}}px;
+                            ">
+                            <div>{{ section.settings.ft_adr_text_name }}</div>
+                            <div>{{ section.settings.ft_adr_text_phone }}</div>
+                            <div>{{ section.settings.ft_adr_text_email }}</div>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="h-social-block">
+                        <div class="h-list-social">
+                          <div class="h-social-item">
+                            <a href="">
+                              <svg style="width:16px; height:16px;" class=" t4s-icon-facebook" role="presentation" viewBox="0 0 320 512"><path d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z"></path></svg>
+                            </a>
+                          </div>
+                          <div class="h-social-item">
+                            <a href="">
+                              <svg style="width:16px; height:16px;" class=" t4s-icon-twitter" role="presentation" viewBox="0 0 512 512"><path d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z"></path></svg>
+                            </a>
+                          </div>
+                          <div class="h-social-item">
+                            <a href="">
+                              <svg style="width:16px; height:16px;" class=" t4s-icon-instagram" role="presentation" viewBox="0 0 448 512"><path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"></path></svg>
+                            </a>
+                          </div>
+                          <div class="h-social-item">
+                            <a href="">
+                              <svg style="width:16px; height:16px;" class=" t4s-icon-dribbble" role="presentation" viewBox="0 0 512 512"><path d="M256 8C119.252 8 8 119.252 8 256s111.252 248 248 248 248-111.252 248-248S392.748 8 256 8zm163.97 114.366c29.503 36.046 47.369 81.957 47.835 131.955-6.984-1.477-77.018-15.682-147.502-6.818-5.752-14.041-11.181-26.393-18.617-41.614 78.321-31.977 113.818-77.482 118.284-83.523zM396.421 97.87c-3.81 5.427-35.697 48.286-111.021 76.519-34.712-63.776-73.185-116.168-79.04-124.008 67.176-16.193 137.966 1.27 190.061 47.489zm-230.48-33.25c5.585 7.659 43.438 60.116 78.537 122.509-99.087 26.313-186.36 25.934-195.834 25.809C62.38 147.205 106.678 92.573 165.941 64.62zM44.17 256.323c0-2.166.043-4.322.108-6.473 9.268.19 111.92 1.513 217.706-30.146 6.064 11.868 11.857 23.915 17.174 35.949-76.599 21.575-146.194 83.527-180.531 142.306C64.794 360.405 44.17 310.73 44.17 256.323zm81.807 167.113c22.127-45.233 82.178-103.622 167.579-132.756 29.74 77.283 42.039 142.053 45.189 160.638-68.112 29.013-150.015 21.053-212.768-27.882zm248.38 8.489c-2.171-12.886-13.446-74.897-41.152-151.033 66.38-10.626 124.7 6.768 131.947 9.055-9.442 58.941-43.273 109.844-90.795 141.978z"></path></svg>
+                            </a>
+                          </div>
+                          <div class="h-social-item">
+                            <a href="">
+                              <svg style="width:16px; height:16px;" class=" t4s-icon-pinterest" role="presentation" viewBox="0 0 384 512"><path d="M204 6.5C101.4 6.5 0 74.9 0 185.6 0 256 39.6 296 63.6 296c9.9 0 15.6-27.6 15.6-35.4 0-9.3-23.7-29.1-23.7-67.8 0-80.4 61.2-137.4 140.4-137.4 68.1 0 118.5 38.7 118.5 109.8 0 53.1-21.3 152.7-90.3 152.7-24.9 0-46.2-18-46.2-43.8 0-37.8 26.4-74.4 26.4-113.4 0-66.2-93.9-54.2-93.9 25.8 0 16.8 2.1 35.4 9.6 50.7-13.8 59.4-42 147.9-42 209.1 0 18.9 2.7 37.5 4.5 56.4 3.4 3.8 1.7 3.4 6.9 1.5 50.4-69 48.6-82.5 71.4-172.8 12.3 23.4 44.1 36 69.3 36 106.2 0 153.9-103.5 153.9-196.8C384 71.3 298.2 6.5 204 6.5z"></path></svg>
+                            </a>
+                          </div>
+                        </div>
+                      </div>
+                  </div>
+              </div>
+              <div class="footer-menu-inner col-md-9">
+                <div class="row">
+                  {% for block in section.blocks %}
+                    {% if block.type == 'link_list' %}
+                      <div class="footer-menu col">
+                        <h3 class="h-text-bl"style="
+                            --text-fs:{{ section.settings.ft_mn_tt_fs}}px;
+                            --text-fw:{{ section.settings.ft_mn_tt_fw }};
+                            --text-lh:{{ section.settings.ft_mn_tt_lh }}px;
+                            --color:{{ section.settings.ft_mn_tt_cl }};
+                            --mg-bottom:{{ section.settings.ft_mn_tt_mgbt}}px;
+                          ">{{ block.settings.heading }}</h3>
+                        {% assign menu = linklists[block.settings.menu] %}
+                        {% if menu %}
+                          <ul>
+                            {% for link in menu.links %}
+                              <li><a class="h-text-bl"style="
+                                list-style-type: none;
+                            --text-fs:{{ section.settings.ft_smn_tt_fs}}px;
+                            --text-fw:{{ section.settings.ft_smn_tt_fw }};
+                            --text-lh:{{ section.settings.ft_smn_tt_lh }}px;
+                            --color:{{ section.settings.ft_smn_tt_cl }};
+                            --mg-bottom:{{ section.settings.ft_smn_tt_mgbt}}px;
+                                " href="{{ link.url }}">{{ link.title }}</a></li>
+                            {% endfor %}
+                          </ul>
+                        {% else %}
+                          <p>Không có menu nào được chọn.</p>
+                        {% endif %}
+                      </div>
+                    {% endif %}
+                  {% endfor %}
+                </div>
+              </div>
+          </div>
+        </div>
     </div>
-  </section>
-  
-  {% schema %}
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+{% schema %}
+{
+  "name": "Footer",
+  "class": "section",
+  "settings": [
+    {
+      "type": "range",
+      "id": "service_mgt",
+      "min": 0,
+      "max": 100,
+      "step": 1,
+      "default":0,
+      "unit": "px",
+      "label": "Margin top"
+    },
+    {
+      "type": "range",
+      "id": "service_mgbt",
+      "min": 0,
+      "max": 100,
+      "step": 1,
+      "default": 1,
+      "unit": "px",
+      "label": "Margin Bottom"
+    },
+    {
+      "type": "image_picker",
+      "id": "image",
+      "label": "Select Image"
+  },
   {
-    "name": "Footer Custom Section",
-    "settings": [
-      {
-        "type": "text",
-        "id": "heading",
-        "label": "Tiêu đề",
-        "default": "Thông tin thêm"
-      },
-      {
-        "type": "textarea",
-        "id": "description",
-        "label": "Mô tả",
-        "default": "Đây là một mô tả ngắn cho phần footer."
-      }
-    ],
-    "blocks": [
-      {
-        "type": "link",
-        "name": "Liên kết",
-        "settings": [
-          {
-            "type": "text",
-            "id": "link_text",
-            "label": "Tên liên kết",
-            "default": "Trang chủ"
-          },
-          {
-            "type": "url",
-            "id": "link_url",
-            "label": "URL liên kết",
-            "default": "/"
-          }
-        ]
-      }
-    ],
-    "presets": [
-      {
-        "name": "Footer Custom Section"
-      }
-    ]
-  }
-  {% endschema %}
-  
+    "type": "range",
+    "id": "ft_img_w",
+    "min": 100,
+    "max": 200,
+    "step": 1,
+    "default": 140,
+    "unit": "px",
+    "label": "Width"
+  },
+  {
+    "type": "range",
+    "id": "ft_img_mgbt",
+    "min": 0,
+    "max": 100,
+    "step": 1,
+    "default": 0,
+    "unit": "px",
+    "label": "Margin Bottom"
+  },
+    {
+      "type": "header",
+      "content": "DES-------------------------------"
+    },
+    {
+      "type": "text",
+      "id": "ft_des_text",
+      "default": "title",
+      "label": "Des",
+    },
+    {
+      "type": "range",
+      "id": "ft_ds_fs",
+      "min": 1,
+      "max": 100,
+      "step": 1,
+      "default": 16,
+      "unit": "px",
+      "label": "Font size"
+    },
+    {
+      "type": "range",
+      "id": "ft_ds_fw",
+      "min": 100,
+      "max": 1000,
+      "step": 100,
+      "default": 300,
+      "label": "Font Weight"
+    },
+    {
+      "type": "range",
+      "id": "ft_ds_lh",
+      "min": 0,
+      "max": 100,
+      "step": 1,
+      "default": 0,
+      "unit": "px",
+      "label": "Line Hight"
+    },
+    {
+      "type": "color",
+      "id": "ft_ds_cl",
+      "default": "#fff",
+      "label": "color"
+    },
+    {
+      "type": "range",
+      "id": "ft_ds_mgbt",
+      "min": 0,
+      "max": 100,
+      "step": 1,
+      "default": 0,
+      "unit": "px",
+      "label": "Margin-bottom"
+    },
+    {
+      "type": "header",
+      "content": "Address-------------------------------"
+    },
+    {
+      "type": "text",
+      "id": "ft_adr_text_name",
+      "default": "title",
+      "label": "Address",
+    },
+    {
+      "type": "text",
+      "id": "ft_adr_text_phone",
+      "default": "title",
+      "label": "Address",
+    },
+    {
+      "type": "text",
+      "id": "ft_adr_text_email",
+      "default": "title",
+      "label": "Address",
+    },
+    {
+      "type": "range",
+      "id": "ft_adr_fs",
+      "min": 1,
+      "max": 100,
+      "step": 1,
+      "default": 16,
+      "unit": "px",
+      "label": "Font size"
+    },
+    {
+      "type": "range",
+      "id": "ft_adr_fw",
+      "min": 100,
+      "max": 1000,
+      "step": 100,
+      "default": 300,
+      "label": "Font Weight"
+    },
+    {
+      "type": "range",
+      "id": "ft_adr_lh",
+      "min": 0,
+      "max": 100,
+      "step": 1,
+      "default": 0,
+      "unit": "px",
+      "label": "Line Hight"
+    },
+    {
+      "type": "color",
+      "id": "ft_adr_cl",
+      "default": "#fff",
+      "label": "color"
+    },
+    {
+      "type": "range",
+      "id": "ft_adr_mgbt",
+      "min": 0,
+      "max": 100,
+      "step": 1,
+      "default": 0,
+      "unit": "px",
+      "label": "Margin-bottom"
+    },
+    {
+      "type": "header",
+      "content": "Menu-------------------------------"
+    },
+    {
+      "type": "range",
+      "id": "ft_mn_tt_fs",
+      "min": 1,
+      "max": 100,
+      "step": 1,
+      "default": 16,
+      "unit": "px",
+      "label": "Font size"
+    },
+    {
+      "type": "range",
+      "id": "ft_mn_tt_fw",
+      "min": 100,
+      "max": 1000,
+      "step": 100,
+      "default": 300,
+      "label": "Font Weight"
+    },
+    {
+      "type": "range",
+      "id": "ft_mn_tt_lh",
+      "min": 0,
+      "max": 100,
+      "step": 1,
+      "default": 0,
+      "unit": "px",
+      "label": "Line Hight"
+    },
+    {
+      "type": "color",
+      "id": "ft_mn_tt_cl",
+      "default": "#fff",
+      "label": "color"
+    },
+    {
+      "type": "range",
+      "id": "ft_mn_tt_mgbt",
+      "min": 0,
+      "max": 100,
+      "step": 1,
+      "default": 0,
+      "unit": "px",
+      "label": "Margin-bottom"
+    },
+    {
+      "type": "header",
+      "content": "Sub Menu-------------------------------"
+    },
+    {
+      "type": "range",
+      "id": "ft_smn_tt_fs",
+      "min": 1,
+      "max": 100,
+      "step": 1,
+      "default": 16,
+      "unit": "px",
+      "label": "Font size"
+    },
+    {
+      "type": "range",
+      "id": "ft_smn_tt_fw",
+      "min": 100,
+      "max": 1000,
+      "step": 100,
+      "default": 300,
+      "label": "Font Weight"
+    },
+    {
+      "type": "range",
+      "id": "ft_smn_tt_lh",
+      "min": 0,
+      "max": 100,
+      "step": 1,
+      "default": 0,
+      "unit": "px",
+      "label": "Line Hight"
+    },
+    {
+      "type": "color",
+      "id": "ft_smn_tt_cl",
+      "default": "#fff",
+      "label": "color"
+    },
+    {
+      "type": "range",
+      "id": "ft_smn_tt_mgbt",
+      "min": 0,
+      "max": 100,
+      "step": 1,
+      "default": 0,
+      "unit": "px",
+      "label": "Margin-bottom"
+    },
+  ],
+  "blocks": [
+    
+    {
+      "type": "link_list",
+      "name": "Liên kết",
+      "settings": [
+        {
+          "type": "inline_richtext",
+          "id": "heading",
+          "default": "Tiêu đề Menu",
+          "label": "Tiêu đề"
+        },
+        {
+          "type": "link_list",
+          "id": "menu",
+          "default": "footer",
+          "label": "Chọn Menu Footer",
+          "info": "Chọn menu mà bạn muốn hiển thị ở footer."
+        }
+      ]
+    }
+  ],
+  "presets": [
+    {
+      "name": "Footer",
+      "category": "Custom"
+    }
+  ]
+}
+{% endschema %}
