--- a/sections/slider.liquid
+++ b/sections/slider.liquid
@@ -54,6 +54,7 @@
                    {% if block.settings.hover_btn %}ef-hover{% endif %}
                   {% if block.settings.border==true %}h-btn-border{% endif %}"
                   style="
+                  --bdrd:{{ block.settings.bdrd }}px;
                   --border-size:{{ block.settings.border_thickness }}px;
                   --btn-fs:{{ block.settings.btn_fs}}px;
                   --animation:{{ block.settings.btn_animation }};
@@ -66,10 +67,8 @@
                   --btn-mg-bottom:{{ block.settings.btn_mg_bottom }}px;
                   --btn-mg-right:{{ block.settings.btn_mg_right }}px;
                   --btn-mg-left:{{ block.settings.btn_mg_left }}px;
-                  --btn-pd-top:{{ block.settings.btn_pd_top }}px;
-                  --btn-pd-bottom:{{ block.settings.btn_pd_bottom }}px;
-                  --btn-pd-left:{{ block.settings.btn_pd_left }}px;
-                  --btn-pd-right:{{ block.settings.btn_pd_right }}px;   
+                  --pdtb:{{ block.settings.btn_pdtb }}px;   
+                  --pdlr:{{ block.settings.btn_pdlr }}px;   
                   --btn-text-color:{{ block.settings.btn_text_color }};
                   {% if block.settings.cb_btn_bgr_color %}--btn-bgr-color:{{ block.settings.btn_bgr_color }};{% endif %}
                       cursor: pointer;"
@@ -343,26 +342,7 @@
             "label": "Text Color"
           },
           
-          {
-            "type": "range",
-            "id": "btn_width",
-            "min": 50,
-            "max": 150,
-            "step": 1,
-            "default": 100,
-            "unit": "px",
-            "label": "Width"
-          },
-          {
-            "type": "range",
-            "id": "btn_height",
-            "min": 10,
-            "max": 500,
-            "step": 10,
-            "default": 30,
-            "unit": "px",
-            "label": "Height"
-          },
+          
           {
             "type": "range",
             "id": "btn_mg_top",
@@ -385,50 +365,40 @@
           },
           {
             "type": "range",
-            "id": "btn_pd_top",
+            "id": "btn_pdtb",
             "min": 0,
             "max": 100,
             "step": 1,
             "default": 0,
             "unit": "px",
-            "label": "Padding top"
+            "label": "Padding top bottom"
           },
           {
             "type": "range",
-            "id": "btn_pd_bottom",
+            "id": "btn_pdlr",
             "min": 0,
             "max": 100,
             "step": 1,
             "default": 0,
             "unit": "px",
-            "label": "Padding bottom"
-          },
-          {
-            "type": "range",
-            "id": "btn_pd_right",
-            "min": 0,
-            "max": 100,
-            "step": 1,
-            "default": 0,
-            "unit": "px",
-            "label": "Pading right"
-          },
-          {
-            "type": "range",
-            "id": "btn_pd_left",
-            "min": 0,
-            "max": 100,
-            "step": 1,
-            "default": 0,
-            "unit": "px",
-            "label": "Pading left"
+            "label": "Padding left right"
           },
           {
             "type": "checkbox",
             "id": "border",
             "label": "border",
             "default": false
-          },    
+          },  
+          {
+            "type": "range",
+            "id": "bdrd",
+            "min": 0,
+            "max": 100,
+            "step": 1,
+            "default":0,
+            "unit": "px",
+            "label": "Border Radius"
+          },  
           {
             "type": "range",
             "id": "border_thickness",
